Fixed profile names

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 			<div class="container">
 				<a href='#' class='brand'> HiddenGe.ms </a>
 					<ul class='nav'>
-						<li><%= link_to "All Statuses", feed_path%></li>
+						<li><%= link_to "All Statuses", statuses_path%></li>
 					</ul>
 
 					<ul class='nav pull-right'>
